<resources>
    <string name="app_name">Calendarius</string>
    <string name="button_settings">Settings</string>
    <string-array name="day_names">
        <item>SU</item>
        <item>MO</item>
        <item>TU</item>
        <item>WE</item>
        <item>TH</item>
        <item>FR</item>
        <item>SA</item>
    </string-array>
    <string-array name="month_names">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
    <string name="day_monday">Monday</string>
    <string name="day_tuesday">Tuesday</string>
    <string name="day_wednesday">Wednesday</string>
    <string name="day_thursday">Thursday</string>
    <string name="day_friday">Friday</string>
    <string name="day_saturday">Saturday</string>
    <string name="day_sunday">Sunday</string>
    <string name="title_activity_settings">Settings</string>
    <string name="settings_appearance_header">Appearance</string>
    <string name="settings_lighten_past">Lighten up the past days</string>
    <string name="settings_theme">Color theme</string>
    <string name="settings_red_days_header">Days of week marked as weekends</string>
    <string name="settings_darkmode">Dark mode</string>
    <string name="settings_darkmode_on">Always on</string>
    <string name="settings_darkmode_off">Always off</string>
    <string name="settings_darkmode_system">Use the system setting</string>
    <string name="settings_holidays">Mark weekends of country</string>
    <string name="settings_holidays_none">None</string>
    <string name="settings_holidays_russia">Russia</string>
    <string name="settings_holidays_belarus">Belarus</string>
    <string name="settings_about_software">About</string>
    <string name="settings_privacy_policy">Privacy Policy</string>
    <string name="settings_privacy_policy_title">Privacy Policy</string>
    <string name="settings_privacy_policy_text">Our privacy policy for Calendarius app is really simple: we don\'t collect or store any of your data, or track your usage in any way.</string>
    <string name="settings_privacy_policy_close">Close</string>
    <string name="settings_privacy_policy_visit_site">Visit site</string>
    <string name="color_theme_classic">Classic</string>
    <string name="color_theme_climate">Climate</string>
    <string name="color_theme_spectrum">Spectrum</string>
</resources>